--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Autofill PromptHero Uploads",
   "description": "Automatically insert upload infos saved in the PNG. This extension is not endorsed by or affiliated with PromptHero.",
   "homepage_url": "https://github.com/HE1CO/autofill-prompthero-uploads",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "manifest_version": 3,
   "icons": {
     "16": "/images/icon-16x16.png",
@@ -18,15 +18,14 @@
       "run_at" : "document_idle",
       "js": ["pngtoy.min.js", "document.js"],
       "matches": [
-        "https://prompthero.com/prompt/upload"
+        "https://prompthero.com/*"
       ]
     }
   ],
   "permissions": [
-    "scripting",
-    "storage"
+    "scripting"
   ],
   "host_permissions": [
-    "https://prompthero.com/prompt/upload"
+    "https://prompthero.com/*"
   ]
 }
